app/assets/stylesheets/posts.css.scss
// Place all the styles related to the posts controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.post-btns {
  margin-top: 40px;
}

.post-btns-box {
  margin-top: 20px;
}

.big-link {
  font-size: 2em;
}

article.post {
  margin: 30px 0;
}

